replace carousel images with nicer ones and vertically center

--- a/website/src/pages/home/Home.scss
+++ b/website/src/pages/home/Home.scss
@@ -4,6 +4,10 @@
   .carousel-img {
     width: 100%;
     overflow: hidden;
+    margin: auto;
+    position: absolute;
+    top: -100%;
+    bottom: -100%;
   }
 }
 
