--- a/website/src/pages/home/Home.scss
+++ b/website/src/pages/home/Home.scss
@@ -16,11 +16,30 @@
   width: 100px;
 }
 
+.main {
+  margin: 20px 300px;
+}
+
 h1,
-p {
+.tagline {
   text-align: center;
 }
 
-h1 {
-  margin-top: 20px;
+.hiw-header {
+  margin-top: 60px;
+  margin-bottom: 20px;
+}
+
+.hiw-cards-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: space-between;
+  width: 800px;
+  margin: auto;
+}
+
+.hiw-cards {
+  flex: 0 1 calc(50% - 20px);
+  margin-bottom: 40px;
 }
