--- a/website/src/pages/contact/Contact.scss
+++ b/website/src/pages/contact/Contact.scss
@@ -5,4 +5,20 @@
 		text-align: center;
 		margin-bottom: 20px;
 	}
+
+	.body {
+		display: flex;
+		justify-content: space-between;
+
+		Form {
+			width: 40%;
+			flex: 1 1;
+			margin-right: 20px;
+		}
+
+		.side-pic {
+			width: 40%;
+			flex: 1 1;
+		}
+	}
 }
