--- a/website/src/pages/home/Home.scss
+++ b/website/src/pages/home/Home.scss
@@ -17,30 +17,40 @@
 }
 
 .main {
-  margin: 20px 300px;
-}
+  margin: 20px 200px;
 
-h1,
-.tagline,
-.get-started {
-  text-align: center;
-}
+  h1,
+  .tagline,
+  .get-started {
+    text-align: center;
+  }
 
-.hiw-header {
-  margin-top: 60px;
-  margin-bottom: 20px;
-}
+  .hiw-header {
+    margin-top: 40px;
+    margin-bottom: 20px;
+  }
 
-.hiw-cards-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-content: space-between;
-  width: 800px;
-  margin: auto;
-}
+  .hiw-cards-container {
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
 
-.hiw-cards {
-  flex: 0 1 calc(50% - 20px);
-  margin-bottom: 40px;
+    .hiw-cards {
+      flex: 0 1 33%;
+      margin-bottom: 40px;
+      margin-left: 15px;
+      margin-right: 15px;
+    }
+
+    .arrow-container {
+      position: relative;
+      flex: 0 4 20%;
+      margin: auto;
+      top: -100px;
+
+      .arrow {
+        width: 100%;
+      }
+    }
+  }
 }
