make org title clickable link to org website

--- a/website/src/pages/orgs/Orgs.scss
+++ b/website/src/pages/orgs/Orgs.scss
@@ -15,6 +15,14 @@
 		.org-info {
 			margin-left: 10px;
 
+			.org-title {
+				color: black;
+			}
+
+			.org-title:hover {
+				text-decoration: none;
+			}
+
 			.org-desc {
 				text-align: justify;
 			}
